--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "draft-js-buttons": "^2.0.1",
     "draft-js-inline-toolbar-plugin": "^3.0.0",
     "draft-js-plugins-editor": "^2.1.1",
+    "mdbreact": "^4.19.1",
     "react": "^16.8.6",
+    "react-animated-css": "^1.2.1",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
     "react-quill": "^1.3.3",
     "react-redux": "^7.0.3",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
