--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
+    "react-parallax": "^2.2.0",
     "react-quill": "^1.3.3",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-scroll-parallax": "^2.1.2",
+    "react-scroll-percentage": "^4.1.0",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0"
