--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
     "react-parallax": "^2.2.0",
+    "react-provide-scroll-position": "^1.0.2",
     "react-quill": "^1.3.3",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
